--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": {
+    "packages": [
+      "workspace/*"
+    ]
+  },
   "devDependencies": {
     "eslint": "^7.10.0",
     "eslint-config-airbnb": "^18.2.0",
