--- a/workspace/wordpress/package.json
+++ b/workspace/wordpress/package.json
@@ -35,6 +35,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
+    "build:incrimental": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
